--- a/config/database.yml
+++ b/config/database.yml
@@ -61,6 +61,9 @@ development:
 test:
   <<: *default
   database: nuitinfo_test
+  username: postgres
+  password:
+  host: db
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
