--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   db:
     image: postgres
+    ports: 
+      - "5342"
   app:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -11,4 +13,6 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    environment:
+      - RAILS_ENV=development
 
